--- a/registeredSP.css
+++ b/registeredSP.css
@@ -5,7 +5,7 @@
 }
 body{
     width: 100%;
-    height: 200vh;
+    height: 150vh;
   
 }
 .wrapper{
@@ -17,6 +17,8 @@ body{
 
 /* header */
 header{
+    /* background-color: #E1E4ED; */
+    /* background-color: #4B95FF; */
     background-color: white;
     width: 100%;
     display: flex;
@@ -29,6 +31,8 @@ header{
     height: 14%;
     border-bottom: 6px solid  
     #173051;
+    /* border-top: 4px solid  
+    #173051; */
     transition: all 0.5s ease;
 }
 #site-header.hide{
@@ -43,18 +47,26 @@ header{
     font-family: 'Montserrat', sans-serif;
 }
 .logo{
-    width: 15%;
+    width: 18%;
     height: 100%;
-    color:#4B95FF;
+    /* color: white; */
 }
-
+.logo h2{
+    color:#4B95FF;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2em;
+}
+/* .logo img{
+    background-color: white;
+} */
 nav{
-    width: 40%;
+    width: 30%;
     height: fit-content;
 }
 
 nav a{
     color:#94989c;
+    /* color: white; */
     cursor: pointer;
     text-transform: uppercase;
     text-decoration: none;
@@ -72,17 +84,19 @@ nav a{
     justify-content: space-evenly;
     font-family: 'Montserrat', sans-serif;
 }
-.rightCompo h3{
+.rightCompo h4{
     color: #94989c;
 }
 .dropdown-content{
     display: none;
 }
 .fa{
+    /* color: #515F69; */
     color: #94989c;
     cursor: pointer;
 }
 .fa:hover{
+    /* color:#4B95FF; */
     color: black;
 }
 .dropdown-content {
@@ -112,127 +126,43 @@ nav a{
 
 /* content */
 .content{
-    margin-top: 3rem;
+    margin-top: 7rem;
     z-index: 1;
     width: 100%;
     height: 30%;
-    background-color: #E1E4ED;
+    /* background-color: #E1E4ED; */
 }
-.content img{
-    width: 100%;
-    height: 180%;
-}
-.imgWording{
-    margin: 0 auto;
-    position: absolute;
-    width: 50%;
-    top: 50%;
-    left: 30%;
-    font-size:150%;
-    color: white;
-    text-shadow: #8d8a8a 3px 5px 2px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    font-family: 'Montserrat', sans-serif;
-}
-.imgWording h2{
-    color: #BCECF7;
-}
-.slogan{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    padding: 1rem;
-}
-.slogan p{
-    color:#173051;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2rm;
-    font-weight: bold;
-    text-align: center;
-    margin: 0.3rem;
-}
-.instruction{
-     margin: 0 auto;
-     background-color: white;
-     width: 80%;
-     align-items: center;
-     display: flex;
-     justify-content: center;
-     border-bottom: 2px solid  #173051;
-     border-top: 2px solid  #173051;
-     padding: 1rem;
-}
-.instruction p{
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2em;
-    font-weight: bold;
-    color:#173051;
-}
-.parentWrapper{
-    margin: 0 auto;
-    width: 85%;
-    display: flex;
-    flex-direction: row;
-}
-.parentWrapper2{
-    margin: 0 auto;
-    width: 85%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-top: 1rem;
-    align-items: center;
-}
-.subDiv1, .subDiv2{
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-    border-radius: 10px;
-    background-color: white;
-    color: #173051;
-    opacity: 99%;
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    margin: 1rem;
-    padding: 20px;
-
-}
-
-.subDiv1 h2, .subDiv2 h2{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1.3em;
-}
-.subDiv1 p, .subDiv2 p{
-    opacity: 90%;
-    font-family: 'Roboto', sans-serif;
-    text-align: justify;
-    color:#515F69;
-    font-size: 12px;
-}
-.subDiv2{
-    display: flex;
-    flex: 1;
-    align-items: center;
-}
-.subDiv2 img{
+/* date */
+.dateCommand{
     margin: 0 auto;
     width: 10%;
-    padding-bottom: 0.2rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    color: #173051;
 }
-.parentWrapper2{
-    flex-direction: column;
+.date{
+    margin: 0 auto;
+    width: 20%;
+    background-color:#4B95FF;
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    margin-bottom: 0.5rem;
 }
-.upperRow, .lowerRow{
-    display: flex;
-    flex: 1;
-    flex-direction: row;
-    justify-content: space-evenly;
+.date input{
+    outline: none;
+    border: 0;
+    background-color: #4B95FF;
     width: 100%;
 }
+
+/* table */
+.table-hover{
+    margin: 0 auto;
+    width: 80%;
+    background-color: white;
+  }
 .feedback{
     width: 7%;
     height: 10%;
@@ -302,12 +232,13 @@ ul{
    list-style: none;
 }
 .footer{
+    /* background-color:  rgb(56, 58, 179); */
     background-color: #173051;
     padding: 40px 0;
 }
 .footer-col{
     width: 22%;
-    padding: 0 15px;
+    padding: 0 px;
 }
 .row{
     display: flex;
@@ -356,7 +287,7 @@ ul{
     width: 40px;
     height: 40px;
     background-color: rgba(255,255,255,0.2);
-    margin: 0 10px 10px 0;
+    margin: 0 5px 5px 0;
     text-align: center;
     line-height: 60px;
     border-radius: 50%;
