--- a/serviceSP.css
+++ b/serviceSP.css
@@ -5,7 +5,7 @@
 }
 body{
     width: 100%;
-    height: 200vh;
+    height: 100vh;
   
 }
 .wrapper{
@@ -17,6 +17,7 @@ body{
 
 /* header */
 header{
+   
     background-color: white;
     width: 100%;
     display: flex;
@@ -29,6 +30,8 @@ header{
     height: 14%;
     border-bottom: 6px solid  
     #173051;
+    /* border-top: 4px solid  
+    #173051; */
     transition: all 0.5s ease;
 }
 #site-header.hide{
@@ -43,18 +46,26 @@ header{
     font-family: 'Montserrat', sans-serif;
 }
 .logo{
-    width: 15%;
+    width: 18%;
     height: 100%;
-    color:#4B95FF;
+    /* color: white; */
 }
-
+.logo h2{
+    color:#4B95FF;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2em;
+}
+/* .logo img{
+    background-color: white;
+} */
 nav{
-    width: 40%;
+    width: 30%;
     height: fit-content;
 }
 
 nav a{
     color:#94989c;
+    /* color: white; */
     cursor: pointer;
     text-transform: uppercase;
     text-decoration: none;
@@ -72,17 +83,19 @@ nav a{
     justify-content: space-evenly;
     font-family: 'Montserrat', sans-serif;
 }
-.rightCompo h3{
+.rightCompo h4{
     color: #94989c;
 }
 .dropdown-content{
     display: none;
 }
 .fa{
+    /* color: #515F69; */
     color: #94989c;
     cursor: pointer;
 }
 .fa:hover{
+    /* color:#4B95FF; */
     color: black;
 }
 .dropdown-content {
@@ -112,127 +125,143 @@ nav a{
 
 /* content */
 .content{
-    margin-top: 3rem;
+    margin-top: 13rem;
     z-index: 1;
     width: 100%;
-    height: 30%;
-    background-color: #E1E4ED;
 }
-.content img{
-    width: 100%;
-    height: 180%;
-}
-.imgWording{
+
+
+/* Remove margins and padding from the list */
+#myUL {
     margin: 0 auto;
+    padding: 0;
+    width: 70%;
+  }
+  
+  /* Style the list items */
+  #myUL li {
+    cursor: pointer;
+    position: relative;
+    padding: 12px 8px 12px 40px;
+    list-style-type: none;
+    background: #eee;
+    font-size: 18px;
+    transition: 0.2s;
+    
+    /* make the list items unselectable */
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Set all odd list items to a different color (zebra-stripes) */
+  #myUL li:nth-child(odd) {
+    background: #f9f9f9;
+  }
+  
+  /* Darker background-color on hover */
+  #myUL li:hover {
+    background: #ddd;
+  }
+  
+  /* When clicked on, add a background color and strike out text */
+  /* ul li.checked {
+    background: #888;
+    color: #fff;
+    text-decoration: line-through;
+  } */
+  
+  /* Add a "checked" mark when clicked on */
+  /* ul li.checked::before {
+    content: '';
     position: absolute;
-    width: 50%;
-    top: 50%;
-    left: 30%;
-    font-size:150%;
+    border-color: #fff;
+    border-style: solid;
+    border-width: 0 2px 2px 0;
+    top: 10px;
+    left: 16px;
+    transform: rotate(45deg);
+    height: 15px;
+    width: 7px;
+  } */
+  
+  /* Style the close button */
+  .close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 12px 16px 12px 16px;
+  }
+  
+  .close:hover {
+    background-color: #f44336;
     color: white;
-    text-shadow: #8d8a8a 3px 5px 2px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    font-family: 'Montserrat', sans-serif;
-}
-.imgWording h2{
-    color: #BCECF7;
-}
-.slogan{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    padding: 1rem;
-}
-.slogan p{
-    color:#173051;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2rm;
-    font-weight: bold;
-    text-align: center;
-    margin: 0.3rem;
-}
-.instruction{
-     margin: 0 auto;
-     background-color: white;
-     width: 80%;
-     align-items: center;
-     display: flex;
-     justify-content: center;
-     border-bottom: 2px solid  #173051;
-     border-top: 2px solid  #173051;
-     padding: 1rem;
-}
-.instruction p{
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2em;
-    font-weight: bold;
-    color:#173051;
-}
-.parentWrapper{
-    margin: 0 auto;
-    width: 85%;
-    display: flex;
-    flex-direction: row;
-}
-.parentWrapper2{
-    margin: 0 auto;
-    width: 85%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-top: 1rem;
-    align-items: center;
-}
-.subDiv1, .subDiv2{
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
-    border-radius: 10px;
+  }
+  
+  /* Style the header */
+  .header {
     background-color: white;
+    padding: 30px 40px;
     color: #173051;
-    opacity: 99%;
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    margin: 1rem;
-    padding: 20px;
-
-}
-
-.subDiv1 h2, .subDiv2 h2{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1.3em;
-}
-.subDiv1 p, .subDiv2 p{
-    opacity: 90%;
-    font-family: 'Roboto', sans-serif;
-    text-align: justify;
-    color:#515F69;
-    font-size: 12px;
-}
-.subDiv2{
-    display: flex;
-    flex: 1;
-    align-items: center;
-}
-.subDiv2 img{
+    text-align: center;
     margin: 0 auto;
-    width: 10%;
-    padding-bottom: 0.2rem;
-}
-.parentWrapper2{
-    flex-direction: column;
-}
-.upperRow, .lowerRow{
-    display: flex;
-    flex: 1;
-    flex-direction: row;
-    justify-content: space-evenly;
-    width: 100%;
-}
+    width: 80%;
+    font-family: 'Montserrat', sans-serif;
+  }
+  
+  /* Clear floats after the header */
+  .header:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Style the input */
+  select {
+    margin: 0;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border: 2px solid #173051; 
+    outline: none;
+    width: 75%;
+    padding: 10px;
+    float: left;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    color: #173051;
+    font-family: 'Roboto', sans-serif;
+  }
+  
+  /* Style the "Add" button */
+  .addBtn {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    padding: 10px;
+    width: 25%;
+    background: #4B95FF;
+    color: #173051;
+    float: left;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s;
+    font-weight: bold;
+  }
+  
+  .addBtn:hover {
+    background-color: #bbb;
+  }
+  
+  
+
+
+
+
+
+
+
 .feedback{
     width: 7%;
     height: 10%;
@@ -266,6 +295,9 @@ nav a{
     width: 80%;
     border-top: 2px solid #173051;
     padding: 1rem;
+    margin-top: 7rem;
+    padding-bottom: 3rem;
+
 }
 .feedbackLink{
     margin: 0 auto;
@@ -302,12 +334,13 @@ ul{
    list-style: none;
 }
 .footer{
+    /* background-color:  rgb(56, 58, 179); */
     background-color: #173051;
     padding: 40px 0;
 }
 .footer-col{
     width: 22%;
-    padding: 0 15px;
+    padding: 0 px;
 }
 .row{
     display: flex;
@@ -356,7 +389,7 @@ ul{
     width: 40px;
     height: 40px;
     background-color: rgba(255,255,255,0.2);
-    margin: 0 10px 10px 0;
+    margin: 0 5px 5px 0;
     text-align: center;
     line-height: 60px;
     border-radius: 50%;
