--- a/registeredUser.css
+++ b/registeredUser.css
@@ -118,9 +118,12 @@ nav a{
     height: 30%;
     background-color: #E1E4ED;
 }
-.content img{
+.top-image{
     width: 100%;
     height: 180%;
+    background-image: url('car.jpg');
+    background-repeat: no-repeat; 
+    background-size: 100% 100%;
 }
 .imgWording{
     margin: 0 auto;
