--- a/userProfilePage.css
+++ b/userProfilePage.css
@@ -92,6 +92,9 @@ body{
     text-align: left;
     margin: 0.4rem;
 }
+.info input{
+    width: 50%;
+}
 .right{
     display: flex;
     flex: 1;
@@ -173,7 +176,7 @@ body{
     display: block;
 }
 
-@media only screen and (max-width: 800px){
+@media only screen and (max-width: 700px){
     body{
         height: 150vh;
     }
@@ -186,5 +189,9 @@ body{
     }
     .info{
         width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
